# $Id$

Griffith ChangeLog
------------------
(c) 2005-2008  Vasco Nunes, Piotr Ożarowski

2008-02-12  Michael Jahn
	* fixed selecting of quick filter volume and collection in main view

2008-02-11  Vasco Nunes
	* Added serbian language file (thanks to Sasa Petrovic) 

2008-02-09  Michael Jahn
	* sort collection list and volume list by name

2008-02-03  Michael Jahn
	* hit enter key in title/original title box starts retrieving data from web for a new entry
	* HTML export: replace linebreaks with <br /> in the data if "XHTML 1.0" is found in the template header

---- 0.9.6 ---

2008-01-27  Michael Jahn
	* Zelluloid plugin updated

2008-01-27  Piotr Ożarowski
	* AniDB and Stopklatka movie plugins updated

2008-01-26  Piotr Ożarowski
	* Translators tab (about dialog) filled in automatically

2008-01-13  Piotr Ożarowski
	* Distribute local copy of SQLAlchemy 0.3.11 (Griffith 0.10 which will work with SQLAlchemy 0.4.x is not ready yet)
	* Version changed to 0.9.6
	* Update .desktop file to Desktop Entry Specification's version 1.0

2008-01-10  Michael Jahn
	* OFDb plugin updated

2008-01-06  Michael Jahn
	* fixed pdf export with non-ascii characters [#174463]

2007-12-16  Piotr Ożarowski
	* Version changed to 0.10~svn
	* Started working on SQLAlchemy 0.4.x compatibility (NOT YET READY)

2007-12-08  Vasco Nunes
	* Danish language file updated

2007-12-07  Vasco Nunes
	* Spanish language file updated

2007-11-30  Michael Jahn
	* HTML export supports video codec name
	* quick filter for volumes
	* export plugins remember the last directory which was used

2007-11-29  Vasco Nunes
	* Russian language file updated

2007-11-28  Michael Jahn
	* [#164966] deactivating spellchecker option in preferences dialog disables the depending elements

2007-11-22  Michael Jahn
	* added columns genre, seen, runtime and year to the mainlist
	* enabled reorderable columns
	* column order is saved

2007-11-12  Michael Jahn
	* Kino.de plugin updated